--- a/aboutus.html
+++ b/aboutus.html
@@ -105,7 +105,10 @@
                             <h2 class="section-title" id="aboutusTitle">Mission</h2>
                         </div>
                         <div class="featured-content wow fadeInDown" data-wow-delay=".3s">
-                            <h4 style="text-align:justify; margin-bottom: 2rem; color: black !important; ">As a software development firm, our mission is to create the conditions for solving our customers' business challenges, by providing the demanded products and top-notch service. We will develop seamless business solutions, promote our clients’ innovative products, create jobs for the talented minds, and global offices to boost interaction.
+                            <h4 style="text-align:justify; margin-bottom: 2rem; color: black !important; ">As a technology company, 
+                                our mission is to create the conditions for solving our customers' business challenges, problems and needs, 
+                                by providing the demanded products and top-notch service. We will develop seamless business solutions, 
+                                promote our clients’ innovative products, create jobs for the talented minds, and global offices to boost interaction.
                              </h4>
                         </div>
                     </div>
@@ -117,7 +120,7 @@
                         </div>
                         <div class="featured-content wow fadeInDown" data-wow-delay=".3s">
                             <h4 style="text-align:justify; margin-bottom: 2rem; color: black !important; ">
-                                We see our company  as the central point of contact for data management who redefines innovation leadership.
+                                We see our company  as the central point of contact for Software Development and Data Management who redefines innovation leadership.
                                 As a top employer, we develop our employees at the highest level. As a future-oriented global player, 
                                 we recognize and promote creativity and out-of-the-box thinking.
                                 Tackling and solving is our daily activity.
@@ -191,7 +194,7 @@
                             <div class="team-details">
                                 <div class="team-inner">
                                     <h4 class="team-title">Marco Weissenbacher</h4>
-                                    <p>Managing Director</p>
+                                    <p>Business Development Manager</p>
                                     <ul class="social-list">
                                         <li><a class="linkedin" href="https://www.linkedin.com/in/weissenbacher/"><i class="lni-linkedin-fill"></i></a></li>
                                         <li><a class="E-mail" href="mailto:Marco.weissenbachergeorg@avdm.at"><i class="lni lni-envelope"></i></i></a></li>
