--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" href="img/about/Logo.png">
     <meta name="author" content="Grayrids">
-    <title>iDeal Technology Solutions</title>
+    <title>Contact | iDeal Technology Solutions</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -26,7 +26,6 @@
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
-    <!-- <link rel="stylesheet" href="css/color-switcher.css"> -->
     <link rel="stylesheet" href="css/menu_sideslide.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -88,7 +87,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-xs-12">
                         <div class="contact-deatils">
-                            <h1 class="contact_location-title">Kosovo</h1>
+                            <h1 class="contact_location-title">Prishtina office</h1>
                             <!-- Content Info -->
                             <div class="contact-info_area">
                                 <div class="contact-info">
@@ -110,7 +109,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-xs-12">
                         <div class="contact-deatils">
-                            <h1 class="contact_location-title">Austria</h1>
+                            <h1 class="contact_location-title">Vienna office</h1>
                             <!-- Content Info -->
                             <div class="contact-info_area">
                                 <div class="contact-info">
@@ -125,9 +124,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 col-md-9 col-xs-12" style="margin-top: 2rem;">
+                    <div class="col-lg-6 col-md-12 col-xs-12" style="margin-top: 2rem;">
                         <div class="gmap_canvas"><iframe width="100%" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=42.654612,%2021.159155&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google maps create map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px; padding-right:10px;}</style></div></div>
-                </div>
+                        <div class="col-lg-6 col-md-12 col-xs-12" style="margin-top: 2rem;">
+                            <div class="gmap_canvas"><iframe width="100%" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=AVDM%20Audio%20Video%20Data%20Management%20GmbH,%20Rennweg%209,%201030%20Vienna&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google maps create map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px; padding-right:10px;}</style></div></div>
+                        </div>
             </div>
         </div>
         </section>
