--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <div class="gmap_canvas"><iframe width="100%" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=42.654612,%2021.159155&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google maps create map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px; padding-right:10px;}</style></div></div>
                 <div class="col-lg-3 col-md-5 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Kosovo</h1>
+                        <h1 class="contact_location-title">Prishtina office</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-lg-3 col-md-5 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Austria</h1>
+                        <h1 class="contact_location-title">Vienna office</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
