Changes on style

--- a/aboutus.html
+++ b/aboutus.html
@@ -211,7 +211,7 @@
                                     <h4 class="team-title">Georg Huemer</h4>
                                     <p>Delivery Manager</p>
                                     <ul class="social-list">
-                                        <li><a class="linkedin" href="https://www.linkedin.com/"><i class="lni-linkedin-fill"></i></a></li>
+                                        <li><a class="linkedin" href="https://www.linkedin.com/in/georg-huemer-60234137/"><i class="lni-linkedin-fill"></i></a></li>
                                         <li><a class="E-mail" href="mailto:georg.huemer@avdm.at"><i class="lni lni-envelope"></i></i></a></li>
                                     </ul>
                                 </div>
