--- a/aboutus.html
+++ b/aboutus.html
@@ -194,7 +194,7 @@
                             <div class="team-details">
                                 <div class="team-inner">
                                     <h4 class="team-title">Marco Weissenbacher</h4>
-                                    <p>Business Development Manager</p>
+                                    <p>Business Development</p>
                                     <ul class="social-list">
                                         <li><a class="linkedin" href="https://www.linkedin.com/in/weissenbacher/"><i class="lni-linkedin-fill"></i></a></li>
                                         <li><a class="E-mail" href="mailto:Marco.weissenbachergeorg@avdm.at"><i class="lni lni-envelope"></i></i></a></li>
@@ -209,7 +209,7 @@
                             <div class="team-details">
                                 <div class="team-inner">
                                     <h4 class="team-title">Georg Huemer</h4>
-                                    <p>Delivery Manager</p>
+                                    <p>Delivery</p>
                                     <ul class="social-list">
                                         <li><a class="linkedin" href="https://www.linkedin.com/in/georg-huemer-60234137/"><i class="lni-linkedin-fill"></i></a></li>
                                         <li><a class="E-mail" href="mailto:georg.huemer@avdm.at"><i class="lni lni-envelope"></i></i></a></li>
