--- a/contact.html
+++ b/contact.html
@@ -82,12 +82,12 @@
         <div class="contact-form">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Let's discuss your project</h2>
+                    <h2 class="section-title">Get in touch</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-xs-12">
                         <div class="contact-deatils">
-                            <h1 class="contact_location-title">Prishtina office</h1>
+                            <h1 class="contact_location-title">Prishtina</h1>
                             <!-- Content Info -->
                             <div class="contact-info_area">
                                 <div class="contact-info">
@@ -109,16 +109,19 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-xs-12">
                         <div class="contact-deatils">
-                            <h1 class="contact_location-title">Vienna office</h1>
+                            <h1 class="contact_location-title">Vienna</h1>
                             <!-- Content Info -->
                             <div class="contact-info_area">
                                 <div class="contact-info">
-                                    <i class="lni-map"></i> <h5>Location</h5>
-                                    <p>AVDM Audio Video Data Management GmbH, Rennweg 9, 1030 Wien</p>
+                                    <h5 style="display: flex; align-items: center;"><i class="lni-map" style="margin-right: 5px;"></i> Location</h5>
+                                    <p>AVDM Audio Video Data Management GmbH<br> Rennweg 9, 1030 Wien</p>
                                 </div>
                             </div>
                             <div class="contact-info">
-                            
+                                <h5 style="display: flex; align-items: center;">  <i style="margin-right: 5px;" class="lni lni-envelope"></i>E-mail</h5>
+                                  <p><a href="mailto:Riad.cunaku@avdm.at">Riad.cunaku@avdm.at</a></p>
+                              </div>
+                            <div class="contact-info">
                                 <h5 style="display: flex; align-items: center;"><i class="lni-phone" style="margin-right: 5px;"></i>Phone</h5>
                                 <p>+43 650 5300 258</p>
                             </div>
