--- a/jobs.html
+++ b/jobs.html
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12">
                 <div class="item-boxes services-item wow jobs-item" data-wow-delay="0.2s">
-                    <h4 class="job-title">DevOps data management</h4>
+                    <h4 class="job-title">DevOps Data Management</h4>
                     <div class=" text-left">
                         <a href="#" onclick="window.open('files/DevOps.pdf')" class="job-link btn btn-lg btn-common btn-effect wow  btn-Readmore">View Details</a>
                      </div>
@@ -121,7 +121,7 @@
                     <div class="gmap_canvas"><iframe width="100%" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=42.654612,%2021.159155&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google maps create map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px; padding-right:10px;}</style></div></div>
                 <div class="col-lg-3 col-md-1 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Prishtina office</h1>
+                        <h1 class="contact_location-title">Prishtina</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-lg-3 col-md-1 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Vienna office</h1>
+                        <h1 class="contact_location-title">Vienna</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
@@ -152,11 +152,15 @@
                             </div>
                         </div>
                         <div class="contact-info">
-                            
+                            <h5 style="display: flex; align-items: center;">  <i style="margin-right: 5px;" class="lni lni-envelope"></i>E-mail</h5>
+                              <p><a href="mailto:Riad.cunaku@avdm.at">Riad.cunaku@avdm.at</a></p>
+                          </div>
+                        <div class="contact-info">
                             <h5 style="display: flex; align-items: center;"><i class="lni-phone" style="margin-right: 5px;"></i>Phone</h5>
                             <p>+43 650 5300 258</p>
                         </div>
-                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
