--- a/imprint.html
+++ b/imprint.html
@@ -88,29 +88,20 @@
                                 10000 Prishtina, Kosovo</br>
                                 www.ideal-t.com</br>
                                 office@ideal-t.com</br>
-                                T: +383 49 424 608</br>
-                                T: +43 650 5300 258</br></br></br>
+                                M: +383 49 424 608</br>
+                                M: +43 650 5300 258</br></br></br>
+
                                 Commercial</br>
-                                Register number: 373935f Commercial register court: HG Wien</br>
-                                UID: ATU66969024</br>
-                                ARA: 19944</br></br></br>
+                                iDeal Technologies LLC</br>
+                                NR. identifikues: 811513218</br>
+                                Bulevardi Deshmoret e kombit Nr. 40, Ulpijane, 10000 Prishtine</br>
+                                +383 49 424 608</br></br></br>
 
-​
-                              Bank details:</br>
-                              EURO account at Ober Bank:</br>
-                              BIC: OBKLAT2L</br>
-                              IBAN: AT66 1500 0046 4102 9980</br></br></br>
-
-  
-                              USD account at Ober Bank:</br>
-                              BIC: OBKLAT2L</br>
-                              IBAN: AT27 1500 0046 4103 4659</br></br></br>
-                              Managing directors:</br>
-
-                              Riad Cunaku</br>
-                              T: +383 49 424 608</br>
-                              T: +43 650 5300 258</br>
-                              office@ideal-t.com</br></br>
+                               Managing directors:</br>
+                               Riad Cunaku</br>
+                               M: +383 49 424 608</br>
+                               M: +43 650 5300 258</br>
+                               office@ideal-t.com</br></br>
                              </h4>
                         </div>
                     </div>
@@ -182,7 +173,7 @@
                         <a class="nav-link active" href="aboutus.html">About Us</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Imprim</a>
+                        <a class="nav-link" href="#">Imprint</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
