--- a/aboutus.html
+++ b/aboutus.html
@@ -360,7 +360,7 @@
                         <a class="nav-link active" href="#">About Us</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="imprint.html">Imprim</a>
+                        <a class="nav-link" href="imprint.html">Imprint</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
