--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
                         <a class="nav-link active" href="aboutus.html">About Us</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="imprint.html">Imprim</a>
+                        <a class="nav-link" href="imprint.html">Imprint</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
