changes on team:

--- a/imprint.html
+++ b/imprint.html
@@ -91,13 +91,13 @@
                                 M: +383 49 424 608</br>
                                 M: +43 650 5300 258</br></br></br>
 
-                                Commercial</br>
+                               <strong>Commercial</strong> </br>
                                 iDeal Technologies LLC</br>
-                                NR. identifikues: 811513218</br>
+                                Identification number: 811513218</br>
                                 Bulevardi Deshmoret e kombit Nr. 40, Ulpijane, 10000 Prishtine</br>
                                 +383 49 424 608</br></br></br>
 
-                               Managing directors:</br>
+                               <strong>Managing director:</strong></br>
                                Riad Cunaku</br>
                                M: +383 49 424 608</br>
                                M: +43 650 5300 258</br>
