--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         <div class="carousel-caption text-left">
                             <!-- <h3 class="wow fadeInRight" data-wow-delay="0.2s">iDeal Technologies</h3> -->
                             <h5 class="wow fadeInRight carousel-caption-txt" data-wow-delay="0.3s">Become a part of iDeal Technologies and upgrade your business!</h5>
-                            <a href="#aboutus" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.2s">About us</a>
-                            <a href="#contact" class="btn btn-lg btn-border wow fadeInRight" data-wow-delay="0.1s">Contact Us</a>
+                            <a href="aboutus.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.2s">About us</a>
+                            <a href="contact.html" class="btn btn-lg btn-border wow fadeInRight" data-wow-delay="0.1s">Contact Us</a>
                         </div>
                     </div>
                 </div>
