--- a/aboutus.html
+++ b/aboutus.html
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-xs-12">
+                    <!-- <div class="col-lg-3 col-md-6 col-xs-12">
                         <div class="single-team">
                             <img src="img/about/img-1.jpg" alt="">
                             <div class="team-details">
@@ -232,7 +232,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
              <div class="row itemSecond">
                 <div class="col-lg-3 col-md-6 col-xs-12">
