--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                             <div class="contact-info_area">
                                 <div class="contact-info">
                                     <h5 style="display: flex; align-items: center;"><i class="lni-map" style="margin-right: 5px;"></i> Location</h5>
-                                    <p>Dëshmorët e Kombit, Nr.40, Ulpijanë <br>Prishtinë 10000</p>
+                                    <p>Dëshmorët e Kombit, Nr.40, Ulpijanë<br>Prishtinë 10000</p>
                                 </div>
                                 <!-- Content Info -->
                                 <div class="contact-info">
@@ -114,7 +114,7 @@
                             <div class="contact-info_area">
                                 <div class="contact-info">
                                     <h5 style="display: flex; align-items: center;"><i class="lni-map" style="margin-right: 5px;"></i> Location</h5>
-                                    <p>AVDM Audio Video Data Management GmbH<br> Rennweg 9, 1030 Wien</p>
+                                    <p>AVDM Audio Video Data Management GmbH, Rennweg 9<br>1030 Wien</p>
                                 </div>
                             </div>
                             <div class="contact-info">
@@ -156,13 +156,13 @@
                             <h3 class="block-title">Contact Us</h3>
                             <ul class="contact-footer">
                                 <li>
-                                    <strong>Address :</strong> <span>Bulevardi Dëshmorët e Kombit, Nr.40, Ulpijanë <br>Prishtinë 10000</span>
+                                    <strong>Address:</strong> <span>Bulevardi Dëshmorët e Kombit, Nr.40, Ulpijanë <br>Prishtinë 10000</span>
                                 </li>
                                 <li>
-                                    <strong>Phone :</strong> <span>+383 49 424 608</span>
+                                    <strong>Phone:</strong> <span>+383 49 424 608</span>
                                 </li>
                                 <li>
-                                    <strong>E-mail :</strong> <span><a href="mailto:office@ideal-t.com">office@ideal-t.com</a></span>
+                                    <strong>E-mail:</strong> <span><a href="mailto:office@ideal-t.com">office@ideal-t.com</a></span>
                                 </li>
                             </ul>
                         </div>
