--- a/aboutus.html
+++ b/aboutus.html
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-xs-12">
+                    <!-- <div class="col-lg-3 col-md-6 col-xs-12">
                         <div class="single-team">
                             <img src="img/about/img-2.jpg" alt="">
                             <div class="team-details">
@@ -217,7 +217,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <div class="col-lg-3 col-md-6 col-xs-12">
                         <div class="single-team">
                             <img src="img/about/img-1.jpg" alt="">
