--- a/idealtech-main/jobs.html
+++ b/idealtech-main/jobs.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -14,6 +18,7 @@
 <link rel="stylesheet" href="css/line-icons.css">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link rel="stylesheet" href="css/owl.theme.css">
+<link href="https://css.gg/css?=" rel="stylesheet">
 <link rel="stylesheet" href="css/jobs.css">
 <link rel="stylesheet" href="css/nivo-lightbox.css">
 <link rel="stylesheet" href="css/magnific-popup.css">
@@ -121,7 +126,7 @@
                     <div class="gmap_canvas"><iframe width="100%" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=42.654612,%2021.159155&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google maps create map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px; padding-right:10px;}</style></div></div>
                 <div class="col-lg-3 col-md-6 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Prishtina</h1>
+                        <h1 class="contact_location-title">Kosovo / Prishtina</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
@@ -143,7 +148,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Vienna</h1>
+                        <h1 class="contact_location-title">Austria / Vienna</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
@@ -153,11 +158,11 @@
                         </div>
                         <div class="contact-info">
                             <h5 style="display: flex; align-items: center;">  <i style="margin-right: 5px;" class="lni lni-envelope"></i>E-mail</h5>
-                              <p><a href="mailto:Riad.cunaku@avdm.at">Riad.cunaku@avdm.at</a></p>
+                              <p><a href="mailto:office@avdm.at">office@avdm.at</a></p>
                           </div>
                         <div class="contact-info">
                             <h5 style="display: flex; align-items: center;"><i class="lni-phone" style="margin-right: 5px;"></i>Phone</h5>
-                            <p>+43 650 5300 258</p>
+                            <p>+43 1 343 9553-0</p>
                         </div>
 
                     </div>
@@ -168,14 +173,17 @@
     </section>
 <!-- Contact Section End -->
 
-<!-- Footer Section Start -->
-<footer>
+ <!-- Footer Section Start -->
+ <footer>
     <!-- Footer Area Start -->
     <section class="footer-Content">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 col-mb-12">
                     <!-- <h3>iDeal Technologies</h3> -->
+                    <div class="textwidget">
+                        <p>Become a part of iDeal Technologies and upgrade your business!</p>
+                    </div>
                     <div class="textwidget">
                         <img src="img/about/IDT.png" class="col-lg-6 col-md-6 col-xs-6 " style="padding: 0 !important;" alt="LOGO">
                     </div>
@@ -196,7 +204,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 col-mb-12">
                     <div class="widget">
                         <h3 class="block-title">Follow us on Social Media</h3>
                         <ul class="footer-social">
@@ -235,7 +243,6 @@
       </div>
     <!-- Footer area End -->
 </footer>
-<!-- Footer Section End -->
 
 <!-- Go To Top Link -->
 <a href="#" class="back-to-top">
