--- a/idealtech-main/aboutus.html
+++ b/idealtech-main/aboutus.html
@@ -302,8 +302,8 @@
     </section>
     <!-- Team section End -->
 
-    <!-- Footer Section Start -->
-    <footer>
+     <!-- Footer Section Start -->
+     <footer>
         <!-- Footer Area Start -->
         <section class="footer-Content">
             <div class="container">
@@ -356,7 +356,7 @@
                   <div class="float-right footer-links">  
                     <ul class="nav nav-inline">
                       <li class="nav-item">
-                        <a class="nav-link active" href="#">About Us</a>
+                        <a class="nav-link active" href="aboutus.html">About Us</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="imprint.html">Imprint</a>
@@ -372,7 +372,6 @@
           </div>
         <!-- Footer area End -->
     </footer>
-    <!-- Footer Section End -->
 
     <!-- Go To Top Link -->
     <a href="#" class="back-to-top">
