--- a/idealtech-main/index.html
+++ b/idealtech-main/index.html
@@ -231,7 +231,7 @@
                     <div class="gmap_canvas"><iframe width="100%" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=42.654612,%2021.159155&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google maps create map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px; padding-right:10px;}</style></div></div>
                 <div class="col-lg-3 col-md-5 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Prishtina</h1>
+                        <h1 class="contact_location-title">Kosovo / Prishtina</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
@@ -253,21 +253,21 @@
                 </div>
                 <div class="col-lg-3 col-md-5 col-xs-12">
                     <div class="contact-deatils">
-                        <h1 class="contact_location-title">Vienna</h1>
+                        <h1 class="contact_location-title">Austria / Vienna</h1>
                         <!-- Content Info -->
                         <div class="contact-info_area">
                             <div class="contact-info">
                                 <h5 style="display: flex; align-items: center;"><i class="lni-map" style="margin-right: 5px;"></i> Location</h5>
-                                <p>AVDM Audio Video Data Management GmbH, Rennweg 9, 1030 Wien</p>
+                                <p>AVDM, Rennweg 9,<br> 1030 Wien</p>
                             </div>
                         </div>
                         <div class="contact-info">
                             <h5 style="display: flex; align-items: center;">  <i style="margin-right: 5px;" class="lni lni-envelope"></i>E-mail</h5>
-                              <p><a href="mailto:Riad.cunaku@avdm.at">Riad.cunaku@avdm.at</a></p>
+                              <p><a href="mailto:office@avdm.at">office@avdm.at</a></p>
                           </div>
                         <div class="contact-info">
                             <h5 style="display: flex; align-items: center;"><i class="lni-phone" style="margin-right: 5px;"></i>Phone</h5>
-                            <p>+43 650 5300 258</p>
+                            <p>+43 1 343 9553-0</p>
                         </div>
 
                     </div>
